--- a/index.html
+++ b/index.html
@@ -6,335 +6,314 @@
 <title>Daily Life Ultra IA</title>
 
 <style>
-*{box-sizing:border-box;margin:0;padding:0;font-family:system-ui;}
 body{
-  min-height:100vh;
-  background:linear-gradient(180deg,#064e3b,#042f2e);
-  color:white;
-  display:flex;
-  flex-direction:column;
-  transition:background .4s;
+margin:0;
+font-family:Arial;
+background:linear-gradient(#2f5fb8,#0a3d62);
+color:white;
+display:flex;
+flex-direction:column;
+height:100vh;
 }
 
 /* HEADER */
-header{
-  display:flex;
-  align-items:center;
-  gap:12px;
-  padding:14px 18px;
-  background:rgba(0,0,0,.3);
-}
-header h3{font-size:18px;}
-#time{
-  margin-left:auto;
-  background:rgba(0,0,0,.35);
-  padding:6px 14px;
-  border-radius:14px;
-  font-size:13px;
+
+.header{
+background:#2d5aa6;
+padding:15px;
+font-weight:bold;
+display:flex;
+justify-content:space-between;
+align-items:center;
 }
 
 /* NAV */
-#topNav{
-  display:flex;
-  gap:12px;
-  padding:14px;
+
+.nav{
+display:flex;
+gap:12px;
+padding:15px;
+justify-content:center;
 }
-.navBox{
-  flex:1;
-  padding:18px 0;
-  background:rgba(255,255,255,.25);
-  border-radius:22px;
-  text-align:center;
-  font-weight:800;
-  cursor:pointer;
+
+.nav button{
+background:rgba(255,255,255,0.25);
+border:none;
+padding:12px 22px;
+border-radius:20px;
+color:white;
+font-weight:bold;
+font-size:16px;
 }
-.navBox.active,
-.navBox:hover{background:rgba(255,255,255,.45);}
 
 /* PAGES */
-.page{display:none;flex-direction:column;padding:14px;}
-.page.active{display:flex;}
 
-/* CARD */
-.card{
-  background:rgba(255,255,255,.2);
-  border-radius:22px;
-  padding:20px;
-  margin-bottom:16px;
-}
-
-/* TASKS */
-.task{
-  display:flex;
-  justify-content:space-between;
-  background:rgba(255,255,255,.3);
-  padding:12px;
-  border-radius:14px;
-  margin-top:8px;
-}
+.page{display:none;flex:1;overflow:auto;padding:15px;}
+.active{display:flex;flex-direction:column;}
 
 /* CHAT */
-#chatContainer{
-  height:55vh;
-  overflow-y:auto;
-  background:rgba(255,255,255,.15);
-  border-radius:20px;
-  padding:10px;
-}
-.message{
-  max-width:70%;
-  padding:10px 14px;
-  border-radius:18px;
-  margin:6px 0;
-  white-space:pre-line;
-}
-.userMsg{background:#38bdf8;color:black;margin-left:auto;}
-.iaMsg{background:#22c55e;color:black;}
 
-/* INPUT ZONE STYLE CHATGPT */
-#iaInputArea{
-  display:flex;
-  align-items:center;
-  gap:8px;
-  margin-top:10px;
-  background:rgba(255,255,255,.15);
-  border-radius:30px;
-  padding:8px;
+.chat{
+flex:1;
+background:rgba(255,255,255,0.15);
+border-radius:25px;
+padding:15px;
+overflow:auto;
 }
 
-#iaInput{
-  flex:1;
-  background:transparent;
-  border:none;
-  color:white;
-  font-size:15px;
-  outline:none;
+.msg{
+padding:12px 16px;
+border-radius:20px;
+margin:10px 0;
+max-width:80%;
+word-wrap:break-word;
 }
 
-/* ICON BUTTONS */
-.iconBtn{
-  width:42px;
-  height:42px;
-  border-radius:50%;
-  background:#38bdf8;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  cursor:pointer;
+.user{
+background:#49b3e8;
+align-self:flex-end;
 }
-.iconBtn svg{width:22px;height:22px;fill:white;}
 
-footer{
-  margin-top:auto;
-  padding:8px 14px;
-  font-size:12px;
-  text-align:right;
-  opacity:.7;
+.bot{
+background:#2ecc71;
+align-self:flex-start;
+}
+
+/* IMAGE */
+
+.msg img{
+max-width:100%;
+border-radius:15px;
+margin-top:5px;
+}
+
+/* INPUT BAR */
+
+.inputBar{
+display:flex;
+align-items:center;
+gap:10px;
+padding:10px;
+background:rgba(0,0,0,0.25);
+border-radius:30px;
+margin-top:10px;
+}
+
+.inputBar input{
+flex:1;
+border:none;
+background:transparent;
+color:white;
+font-size:16px;
+outline:none;
+}
+
+/* BUTTONS */
+
+.btn{
+width:50px;
+height:50px;
+border-radius:50%;
+border:none;
+background:#49b3e8;
+color:white;
+font-size:22px;
+}
+
+/* OTHER PAGES */
+
+.center{
+flex:1;
+display:flex;
+justify-content:center;
+align-items:center;
+font-size:22px;
 }
 </style>
 </head>
 
 <body>
 
-<header>
-  <h3>Daily Life Ultra IA</h3>
-  <div id="time"></div>
-</header>
+<div class="header">
+<span>Daily Life Ultra IA</span>
+<span id="clock"></span>
+</div>
 
-<div id="topNav">
-  <div class="navBox active" onclick="showPage('home',this)">Accueil</div>
-  <div class="navBox" onclick="showPage('ia',this)">IA</div>
-  <div class="navBox" onclick="showPage('promo',this)">Code Promo</div>
+<div class="nav">
+<button onclick="showPage('home')">Accueil</button>
+<button onclick="showPage('ia')">IA</button>
+<button onclick="showPage('promo')">Code Promo</button>
 </div>
 
 <!-- ACCUEIL -->
+
 <div id="home" class="page active">
-  <div class="card">
-    <h3>Couleur</h3>
-    <select id="colorSelect">
-      <option value="#064e3b">Vert</option>
-      <option value="#3b82f6">Bleu</option>
-      <option value="#ef4444">Rouge</option>
-      <option value="#f97316">Orange</option>
-      <option value="#a855f7">Violet</option>
-      <option value="#ec4899">Rose</option>
-    </select>
-  </div>
-
-  <div class="card">
-    <h3>Langue</h3>
-    <select>
-      <option>Français</option>
-      <option>Anglais</option>
-      <option>Espagnol</option>
-      <option>Allemand</option>
-    </select>
-  </div>
-
-  <div class="card">
-    <h3>Tâches</h3>
-    <input id="taskInput" placeholder="Nouvelle tâche">
-    <button onclick="addTask()">Ajouter</button>
-    <div id="taskList"></div>
-  </div>
+<div class="center">Bienvenue</div>
 </div>
 
-<!-- IA -->
+<!-- IA PAGE -->
+
 <div id="ia" class="page">
-  <div id="chatContainer"></div>
 
-  <div id="iaInputArea">
+<div id="chat" class="chat"></div>
 
-    <!-- PLUS IMAGE -->
-    <div class="iconBtn" onclick="fileInput.click()" title="Image">
-      <svg viewBox="0 0 24 24">
-        <path d="M19 11H13V5h-2v6H5v2h6v6h2v-6h6z"/>
-      </svg>
-    </div>
+<div class="inputBar">
 
-    <input id="iaInput" placeholder="Écris un message…">
+<button class="btn" onclick="pickImage()">+</button>
 
-    <!-- MICRO -->
-    <div class="iconBtn" onclick="toggleVoice()" title="Parler">
-      <svg viewBox="0 0 24 24">
-        <path d="M12 14a3 3 0 003-3V5a3 3 0 00-6 0v6a3 3 0 003 3z"/>
-        <path d="M5 10v2a7 7 0 0014 0v-2h-2v2a5 5 0 01-10 0v-2H5z"/>
-      </svg>
-    </div>
+<input id="text" placeholder="Écris un message...">
 
-    <!-- ENVOI -->
-    <div class="iconBtn" onclick="askIA()" title="Envoyer">
-      <svg viewBox="0 0 24 24">
-        <path d="M2 21l21-9L2 3v7l15 2-15 2z"/>
-      </svg>
-    </div>
+<button class="btn" onclick="startVoice()">🎤</button>
 
-  </div>
+<button class="btn" onclick="sendMessage()">➤</button>
 
-  <input type="file" id="fileInput" accept="image/*" capture="environment" hidden>
+<input type="file" id="imgInput" accept="image/*" hidden>
 
 </div>
 
-<!-- PROMO -->
+</div>
+
+<!-- CODE PROMO -->
+
 <div id="promo" class="page">
-  <div class="card">
-    <h3>Code Promo</h3>
-    <input id="promoInput" placeholder="Entre ton code">
-    <button onclick="validatePromo()">Valider</button>
-    <div id="promoResult"></div>
-  </div>
+<div class="center">Code Promo</div>
 </div>
-
-<footer>© 2026 Daily Life Ultra IA ⚡</footer>
 
 <script>
 
-// TIME
-setInterval(()=>time.textContent=new Date().toLocaleTimeString(),1000);
+/* CLOCK */
 
-// NAV
-function showPage(id,el){
-  document.querySelectorAll('.page').forEach(p=>p.classList.remove('active'));
-  document.getElementById(id).classList.add('active');
-  document.querySelectorAll('.navBox').forEach(b=>b.classList.remove('active'));
-  el.classList.add('active');
+setInterval(()=>{
+document.getElementById("clock").textContent=
+new Date().toLocaleTimeString();
+},1000);
+
+/* NAVIGATION */
+
+function showPage(p){
+document.querySelectorAll(".page")
+.forEach(e=>e.classList.remove("active"));
+document.getElementById(p).classList.add("active");
 }
 
-// THEME
-const colorSelect=document.getElementById("colorSelect");
-colorSelect.value=localStorage.getItem("color")||"#064e3b";
-applyColor();
-colorSelect.onchange=()=>{
-  localStorage.setItem("color",colorSelect.value);
-  applyColor();
-}
-function applyColor(){
-  document.body.style.background=`linear-gradient(180deg,${colorSelect.value},#042f2e)`;
-}
+/* CHAT */
 
-// TASKS
-let tasks=JSON.parse(localStorage.getItem("tasks")||"[]");
-function renderTasks(){
-  taskList.innerHTML="";
-  tasks.forEach((t,i)=>{
-    taskList.innerHTML+=`<div class="task">${t}<span onclick="delTask(${i})">🗑️</span></div>`;
-  });
-}
-function addTask(){
-  if(!taskInput.value.trim())return;
-  tasks.push(taskInput.value.trim());
-  localStorage.setItem("tasks",JSON.stringify(tasks));
-  taskInput.value="";
-  renderTasks();
-}
-function delTask(i){
-  tasks.splice(i,1);
-  localStorage.setItem("tasks",JSON.stringify(tasks));
-  renderTasks();
-}
-renderTasks();
+const chat=document.getElementById("chat");
 
-// IA
-function askIA(){
-  const q=iaInput.value.trim();
-  if(!q)return;
-
-  chatContainer.innerHTML+=`<div class="message userMsg">${q}</div>`;
-
-  let r="Je réfléchis à ton message.";
-
-  chatContainer.innerHTML+=`<div class="message iaMsg">${r}</div>`;
-  chatContainer.scrollTop=chatContainer.scrollHeight;
-
-  // voix IA
-  const speech=new SpeechSynthesisUtterance(r);
-  speech.lang='fr-FR';
-  speechSynthesis.speak(speech);
-
-  iaInput.value="";
+function addUser(text){
+const d=document.createElement("div");
+d.className="msg user";
+d.textContent=text;
+chat.appendChild(d);
+chat.scrollTop=chat.scrollHeight;
 }
 
-// IMAGE
-fileInput.onchange=e=>{
-  const file=e.target.files[0];
-  if(!file)return;
-  chatContainer.innerHTML+=`<div class="message userMsg">Image envoyée</div>`;
+function addBot(text){
+const d=document.createElement("div");
+d.className="msg bot";
+d.textContent=text;
+chat.appendChild(d);
+chat.scrollTop=chat.scrollHeight;
 }
 
-// VOCAL CONTINU
+/* SEND TEXT */
+
+function sendMessage(){
+const input=document.getElementById("text");
+const text=input.value.trim();
+if(!text) return;
+
+addUser(text);
+input.value="";
+
+setTimeout(()=>{
+addBot(simpleAI(text));
+},600);
+}
+
+/* SIMPLE OFFLINE IA */
+
+function simpleAI(t){
+t=t.toLowerCase();
+
+if(t.includes("bonjour")) return "Bonjour";
+if(t.includes("ça va")) return "Oui et toi ?";
+if(t.includes("merci")) return "Avec plaisir";
+if(t.includes("heure")) return new Date().toLocaleTimeString();
+
+return "Je comprends.";
+}
+
+/* IMAGE UPLOAD */
+
+function pickImage(){
+document.getElementById("imgInput").click();
+}
+
+document.getElementById("imgInput").onchange=e=>{
+const file=e.target.files[0];
+if(!file) return;
+
+const reader=new FileReader();
+
+reader.onload=function(ev){
+
+const div=document.createElement("div");
+div.className="msg user";
+
+const img=document.createElement("img");
+img.src=ev.target.result;
+
+div.appendChild(img);
+chat.appendChild(div);
+
+chat.scrollTop=chat.scrollHeight;
+
+setTimeout(()=>{
+addBot("Image reçue.");
+},600);
+
+};
+
+reader.readAsDataURL(file);
+};
+
+/* VOICE */
+
 let recognition;
-let listening=false;
 
-function toggleVoice(){
-  const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
-  if(!SpeechRecognition){alert("Vocal non supporté");return;}
+function startVoice(){
 
-  if(!listening){
-    recognition=new SpeechRecognition();
-    recognition.lang='fr-FR';
-    recognition.continuous=true;
-    recognition.start();
-    listening=true;
-
-    recognition.onresult=e=>{
-      iaInput.value=e.results[e.results.length-1][0].transcript;
-    };
-
-  }else{
-    recognition.stop();
-    listening=false;
-    askIA();
-  }
+if(!('webkitSpeechRecognition' in window)){
+alert("Non supporté");
+return;
 }
 
-// PROMO
-function validatePromo(){
-  promoResult.textContent =
-    promoInput.value==="PROMO2026"
-    ? "Code valide"
-    : "Code invalide";
+recognition=new webkitSpeechRecognition();
+recognition.lang="fr-FR";
+
+recognition.onresult=e=>{
+const text=e.results[0][0].transcript;
+addUser(text);
+
+setTimeout(()=>{
+addBot(simpleAI(text));
+speak(simpleAI(text));
+},500);
+};
+
+recognition.start();
 }
+
+/* SPEECH */
+
+function speak(t){
+const u=new SpeechSynthesisUtterance(t);
+u.lang="fr-FR";
+speechSynthesis.speak(u);
+}
+
 </script>
 
 </body>
-    </html>
+</html>
