--- a/index.html
+++ b/index.html
@@ -6,314 +6,351 @@
 <title>Daily Life Ultra IA</title>
 
 <style>
+*{box-sizing:border-box;margin:0;padding:0;font-family:system-ui;}
 body{
-margin:0;
-font-family:Arial;
-background:linear-gradient(#2f5fb8,#0a3d62);
-color:white;
-display:flex;
-flex-direction:column;
-height:100vh;
+  min-height:100vh;
+  background:linear-gradient(180deg,#064e3b,#042f2e);
+  color:white;
+  display:flex;
+  flex-direction:column;
+  transition:background .4s;
 }
 
 /* HEADER */
-
-.header{
-background:#2d5aa6;
-padding:15px;
-font-weight:bold;
-display:flex;
-justify-content:space-between;
-align-items:center;
+header{
+  display:flex;
+  align-items:center;
+  gap:12px;
+  padding:14px 18px;
+  background:rgba(0,0,0,.3);
+}
+header h3{font-size:18px;}
+#time{
+  margin-left:auto;
+  background:rgba(0,0,0,.35);
+  padding:6px 14px;
+  border-radius:14px;
+  font-size:13px;
 }
 
 /* NAV */
-
-.nav{
-display:flex;
-gap:12px;
-padding:15px;
-justify-content:center;
+#topNav{
+  display:flex;
+  gap:12px;
+  padding:14px;
 }
-
-.nav button{
-background:rgba(255,255,255,0.25);
-border:none;
-padding:12px 22px;
-border-radius:20px;
-color:white;
-font-weight:bold;
-font-size:16px;
+.navBox{
+  flex:1;
+  padding:18px 0;
+  background:rgba(255,255,255,.25);
+  border-radius:22px;
+  text-align:center;
+  font-weight:800;
+  cursor:pointer;
+  transition:.3s;
 }
+.navBox.active,
+.navBox:hover{background:rgba(255,255,255,.45);}
 
 /* PAGES */
+.page{
+  display:none;
+  flex-direction:column;
+  padding:14px;
+}
+.page.active{display:flex;}
 
-.page{display:none;flex:1;overflow:auto;padding:15px;}
-.active{display:flex;flex-direction:column;}
+/* CARD */
+.card{
+  background:rgba(255,255,255,.2);
+  border-radius:22px;
+  padding:20px;
+  margin-bottom:16px;
+}
+.card h3{margin-bottom:12px;}
 
-/* CHAT */
+/* INPUT */
+input,select,button{
+  width:100%;
+  padding:14px;
+  border-radius:16px;
+  border:none;
+  font-size:15px;
+}
+button{
+  background:#38bdf8;
+  font-weight:700;
+  margin-top:10px;
+  cursor:pointer;
+}
+button:hover{background:#0ea5e9}
 
-.chat{
-flex:1;
-background:rgba(255,255,255,0.15);
-border-radius:25px;
-padding:15px;
-overflow:auto;
+/* TASKS */
+.task{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  background:rgba(255,255,255,.3);
+  padding:12px;
+  border-radius:14px;
+  margin-top:8px;
+}
+.trash{cursor:pointer;font-size:18px;}
+
+/* IA CHAT */
+#chatContainer{
+  height:55vh;
+  overflow-y:auto;
+  background:rgba(255,255,255,.15);
+  border-radius:20px;
+  padding:10px;
+}
+.message{
+  max-width:70%;
+  padding:10px 14px;
+  border-radius:18px;
+  margin:6px 0;
+  white-space:pre-line;
+}
+.userMsg{
+  background:#38bdf8;
+  color:black;
+  margin-left:auto;
+}
+.iaMsg{
+  background:#22c55e;
+  color:black;
 }
 
-.msg{
-padding:12px 16px;
-border-radius:20px;
-margin:10px 0;
-max-width:80%;
-word-wrap:break-word;
+/* IA INPUT BAR */
+#iaInputArea{
+  display:flex;
+  gap:8px;
+  margin-top:10px;
+  align-items:center;
 }
 
-.user{
-background:#49b3e8;
-align-self:flex-end;
+#iaInput{flex:1;}
+
+.circleBtn{
+  width:46px;
+  height:46px;
+  border-radius:50%;
+  font-size:18px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  background:#38bdf8;
+  color:black;
+  cursor:pointer;
+  border:none;
 }
 
-.bot{
-background:#2ecc71;
-align-self:flex-start;
-}
+.circleBtn:hover{background:#0ea5e9}
 
-/* IMAGE */
+#fileInput{display:none}
 
-.msg img{
-max-width:100%;
-border-radius:15px;
-margin-top:5px;
-}
-
-/* INPUT BAR */
-
-.inputBar{
-display:flex;
-align-items:center;
-gap:10px;
-padding:10px;
-background:rgba(0,0,0,0.25);
-border-radius:30px;
-margin-top:10px;
-}
-
-.inputBar input{
-flex:1;
-border:none;
-background:transparent;
-color:white;
-font-size:16px;
-outline:none;
-}
-
-/* BUTTONS */
-
-.btn{
-width:50px;
-height:50px;
-border-radius:50%;
-border:none;
-background:#49b3e8;
-color:white;
-font-size:22px;
-}
-
-/* OTHER PAGES */
-
-.center{
-flex:1;
-display:flex;
-justify-content:center;
-align-items:center;
-font-size:22px;
+/* FOOTER */
+footer{
+  margin-top:auto;
+  padding:8px 14px;
+  font-size:12px;
+  text-align:right;
+  opacity:.7;
 }
 </style>
 </head>
 
 <body>
 
-<div class="header">
-<span>Daily Life Ultra IA</span>
-<span id="clock"></span>
+<header>
+  <h3>Daily Life Ultra IA</h3>
+  <div id="time"></div>
+</header>
+
+<div id="topNav">
+  <div class="navBox active" onclick="showPage('home',this)">Accueil</div>
+  <div class="navBox" onclick="showPage('ia',this)">IA</div>
+  <div class="navBox" onclick="showPage('promo',this)">Code Promo</div>
 </div>
 
-<div class="nav">
-<button onclick="showPage('home')">Accueil</button>
-<button onclick="showPage('ia')">IA</button>
-<button onclick="showPage('promo')">Code Promo</button>
-</div>
-
-<!-- ACCUEIL -->
-
+<!-- ACCUEIL (INCHANGÉ) -->
 <div id="home" class="page active">
-<div class="center">Bienvenue</div>
+  <div class="card">
+    <h3>🎨 Couleur</h3>
+    <select id="colorSelect">
+      <option value="#064e3b">Vert</option>
+      <option value="#3b82f6">Bleu</option>
+      <option value="#ef4444">Rouge</option>
+      <option value="#f97316">Orange</option>
+      <option value="#a855f7">Violet</option>
+      <option value="#ec4899">Rose</option>
+    </select>
+  </div>
+
+  <div class="card">
+    <h3>🌍 Langue</h3>
+    <select>
+      <option>Français</option>
+      <option>Anglais</option>
+      <option>Espagnol</option>
+      <option>Allemand</option>
+    </select>
+  </div>
+
+  <div class="card">
+    <h3>✅ Tâches</h3>
+    <input id="taskInput" placeholder="Nouvelle tâche">
+    <button onclick="addTask()">Ajouter</button>
+    <div id="taskList"></div>
+  </div>
 </div>
 
-<!-- IA PAGE -->
-
+<!-- IA (MODIFIÉE) -->
 <div id="ia" class="page">
 
-<div id="chat" class="chat"></div>
+  <div id="chatContainer"></div>
 
-<div class="inputBar">
+  <div id="iaInputArea">
 
-<button class="btn" onclick="pickImage()">+</button>
+    <!-- Bouton + image -->
+    <button class="circleBtn" onclick="fileInput.click()">+</button>
+    <input type="file" id="fileInput" accept="image/*">
 
-<input id="text" placeholder="Écris un message...">
+    <!-- Champ texte -->
+    <input id="iaInput" placeholder="Écris ton message">
 
-<button class="btn" onclick="startVoice()">🎤</button>
+    <!-- Micro -->
+    <button class="circleBtn" onclick="startVoice()">🎤</button>
 
-<button class="btn" onclick="sendMessage()">➤</button>
+    <!-- Envoyer -->
+    <button class="circleBtn" onclick="askIA()">⬆</button>
 
-<input type="file" id="imgInput" accept="image/*" hidden>
-
+  </div>
 </div>
 
-</div>
-
-<!-- CODE PROMO -->
-
+<!-- PROMO (INCHANGÉ) -->
 <div id="promo" class="page">
-<div class="center">Code Promo</div>
+  <div class="card">
+    <h3>🎁 Code Promo</h3>
+    <input id="promoInput" placeholder="Entre ton code">
+    <button onclick="validatePromo()">Valider</button>
+    <div id="promoResult"></div>
+  </div>
 </div>
+
+<footer>© 2026 Daily Life Ultra IA ⚡</footer>
 
 <script>
+// TIME
+setInterval(()=>time.textContent=new Date().toLocaleTimeString(),1000);
 
-/* CLOCK */
-
-setInterval(()=>{
-document.getElementById("clock").textContent=
-new Date().toLocaleTimeString();
-},1000);
-
-/* NAVIGATION */
-
-function showPage(p){
-document.querySelectorAll(".page")
-.forEach(e=>e.classList.remove("active"));
-document.getElementById(p).classList.add("active");
+// NAV
+function showPage(id,el){
+  document.querySelectorAll('.page').forEach(p=>p.classList.remove('active'));
+  document.getElementById(id).classList.add('active');
+  document.querySelectorAll('.navBox').forEach(b=>b.classList.remove('active'));
+  el.classList.add('active');
 }
 
-/* CHAT */
-
-const chat=document.getElementById("chat");
-
-function addUser(text){
-const d=document.createElement("div");
-d.className="msg user";
-d.textContent=text;
-chat.appendChild(d);
-chat.scrollTop=chat.scrollHeight;
+// THEME
+const colorSelect=document.getElementById("colorSelect");
+colorSelect.value=localStorage.getItem("color")||"#064e3b";
+applyColor();
+colorSelect.onchange=()=>{
+  localStorage.setItem("color",colorSelect.value);
+  applyColor();
+}
+function applyColor(){
+  document.body.style.background=`linear-gradient(180deg,${colorSelect.value},#042f2e)`;
 }
 
-function addBot(text){
-const d=document.createElement("div");
-d.className="msg bot";
-d.textContent=text;
-chat.appendChild(d);
-chat.scrollTop=chat.scrollHeight;
+// TASKS
+let tasks=JSON.parse(localStorage.getItem("tasks")||"[]");
+function renderTasks(){
+  taskList.innerHTML="";
+  tasks.forEach((t,i)=>{
+    taskList.innerHTML+=`
+      <div class="task">
+        <span>${t}</span>
+        <span class="trash" onclick="delTask(${i})">🗑️</span>
+      </div>`;
+  });
+}
+function addTask(){
+  if(!taskInput.value.trim())return;
+  tasks.push(taskInput.value.trim());
+  localStorage.setItem("tasks",JSON.stringify(tasks));
+  taskInput.value="";
+  renderTasks();
+}
+function delTask(i){
+  tasks.splice(i,1);
+  localStorage.setItem("tasks",JSON.stringify(tasks));
+  renderTasks();
+}
+renderTasks();
+
+// IA TEXTE
+function askIA(){
+  const q=iaInput.value.trim();
+  if(!q)return;
+
+  chatContainer.innerHTML+=`<div class="message userMsg">${q}</div>`;
+
+  const reply="Tu as dit : " + q;
+
+  chatContainer.innerHTML+=`<div class="message iaMsg">${reply}</div>`;
+
+  speak(reply);
+
+  iaInput.value="";
+  chatContainer.scrollTop=chatContainer.scrollHeight;
 }
 
-/* SEND TEXT */
-
-function sendMessage(){
-const input=document.getElementById("text");
-const text=input.value.trim();
-if(!text) return;
-
-addUser(text);
-input.value="";
-
-setTimeout(()=>{
-addBot(simpleAI(text));
-},600);
-}
-
-/* SIMPLE OFFLINE IA */
-
-function simpleAI(t){
-t=t.toLowerCase();
-
-if(t.includes("bonjour")) return "Bonjour";
-if(t.includes("ça va")) return "Oui et toi ?";
-if(t.includes("merci")) return "Avec plaisir";
-if(t.includes("heure")) return new Date().toLocaleTimeString();
-
-return "Je comprends.";
-}
-
-/* IMAGE UPLOAD */
-
-function pickImage(){
-document.getElementById("imgInput").click();
-}
-
-document.getElementById("imgInput").onchange=e=>{
-const file=e.target.files[0];
-if(!file) return;
-
-const reader=new FileReader();
-
-reader.onload=function(ev){
-
-const div=document.createElement("div");
-div.className="msg user";
-
-const img=document.createElement("img");
-img.src=ev.target.result;
-
-div.appendChild(img);
-chat.appendChild(div);
-
-chat.scrollTop=chat.scrollHeight;
-
-setTimeout(()=>{
-addBot("Image reçue.");
-},600);
-
-};
-
-reader.readAsDataURL(file);
-};
-
-/* VOICE */
-
-let recognition;
-
+// IA VOIX → TEXTE
 function startVoice(){
+  const rec = new(window.SpeechRecognition||window.webkitSpeechRecognition)();
+  rec.lang="fr-FR";
+  rec.start();
 
-if(!('webkitSpeechRecognition' in window)){
-alert("Non supporté");
-return;
+  rec.onresult=e=>{
+    const text=e.results[0][0].transcript;
+    iaInput.value=text;
+    askIA();
+  };
 }
 
-recognition=new webkitSpeechRecognition();
-recognition.lang="fr-FR";
-
-recognition.onresult=e=>{
-const text=e.results[0][0].transcript;
-addUser(text);
-
-setTimeout(()=>{
-addBot(simpleAI(text));
-speak(simpleAI(text));
-},500);
-};
-
-recognition.start();
+// IA VOIX → PAROLE
+function speak(text){
+  const u=new SpeechSynthesisUtterance(text);
+  u.lang="fr-FR";
+  speechSynthesis.speak(u);
 }
 
-/* SPEECH */
+// IMAGE (sans API)
+fileInput.onchange=e=>{
+  const file=e.target.files[0];
+  if(!file)return;
 
-function speak(t){
-const u=new SpeechSynthesisUtterance(t);
-u.lang="fr-FR";
-speechSynthesis.speak(u);
+  const reader=new FileReader();
+  reader.onload=ev=>{
+    chatContainer.innerHTML+=`
+      <div class="message userMsg">
+        <img src="${ev.target.result}" style="max-width:100%;border-radius:12px">
+      </div>`;
+  };
+  reader.readAsDataURL(file);
 }
 
+// PROMO
+function validatePromo(){
+  promoResult.textContent =
+    promoInput.value==="PROMO2026"
+    ? "Code valide"
+    : "Code invalide";
+}
 </script>
 
 </body>
-</html>
+  </html>
